--- a/pagina3/css/estilos.css
+++ b/pagina3/css/estilos.css
@@ -33,6 +33,18 @@ p, a {
 .ocultar {
     display: none;
 }
+
+@keyframes desplazamiento {
+    /* desplazamiento inicial */
+    0% {
+        transform: translateX(-100%);
+    }
+
+    100% {
+        transform: translateX(0);
+    }
+}
+
 /* encabezado */
 .encabezado {
     background-image: url('../img/fondo.jpg');
@@ -58,10 +70,60 @@ p, a {
     box-shadow: 10px 10px 16px -6px rgba(0, 0, 0, 0.45);
 }
 
+.navegacion {
+    background-color: var(--blanco);
+    position: absolute;
+    left: 0;
+    top: 70px;
+    width: 100%;
+    /* height: 100vh; */
+    animation: desplazamiento .5s ease-in-out;
+}
+
+@media(min-width:768px){
+    .ocultar {
+        display: inline;
+    }
+}
+
+.navegacion a {
+    display: block;
+    font-size: 2rem;
+    padding: 1.1rem;
+    color: var(--oscuro);
+    text-decoration: none;
+    /* text-align: center; */
+    transition: background-color .3s ease-in-out;
+}
+
+.navegacion a:hover {
+    background-color: var(--azulClaro);
+    color: var(--blanco);
+}
+
+@media(min-width:768px){
+    .navegacion a {
+        display: inline;
+    }
+    .navegacion {
+        position: relative;
+        top: unset;
+        width: auto;
+        background-color: unset;
+        animation: unset;
+    }
+}
+
 .menu-hamburguesa span {
     width: 5rem;
     height: 1rem;
     border: 3px solid white;
     background-color: var(--oscuro);
     display: block;
+}
+
+@media(min-width: 768px){
+    .menu-hamburguesa {
+        display: none;
+    }
 }
