--- a/pagina3/css/estilos.css
+++ b/pagina3/css/estilos.css
@@ -34,6 +34,28 @@ p, a {
     display: none;
 }
 
+.contenedor {
+    margin: 0 auto;
+    max-width: 120rem;
+    width: 95%;
+}
+
+.btn {
+    padding: 1rem 3rem;
+    font-weight: bold;
+    font-family: var(--parrafos);
+    font-size: 2rem;
+    border: none;
+    color: var(--blanco);
+}
+
+.btn:hover {
+    cursor: pointer;
+}
+.azul {
+    background-color: var(--azulClaro);
+}
+
 @keyframes desplazamiento {
     /* desplazamiento inicial */
     0% {
@@ -53,6 +75,19 @@ p, a {
     min-height: 70rem;
     background-size: cover;
     background-position: center;
+    position: relative;
+    z-index: 1;
+}
+
+.encabezado::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: -1;
 }
 
 .logo h2 {
@@ -126,4 +161,67 @@ p, a {
     .menu-hamburguesa {
         display: none;
     }
+}
+
+/* contenido del encabezado */
+
+@media(min-width:768px) {
+    .contenido-encabezado {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        height: 85%;
+    }
+
+    .contenido-encabezado, .formulario-encabezado {
+        flex: 0 0 calc(50%-1rem);
+    }
+}
+.texto-encabezado h1 {
+    font-size: 3rem;
+    text-align: center;
+    color: var(--blanco);
+    padding-top: 8rem;
+}
+
+@media(min-width:768px){
+    .texto-encabezado h1 {
+        font-size: 7rem;
+        text-align: left;
+        padding-top: 0;
+    }
+}
+.formulario-encabezado {
+    background-color: var(--blanco);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 5rem;
+    border-radius: .5rem;
+}
+
+.formulario-encabezado h2 {
+    font-size: 3rem;
+    text-align: center;
+    margin-top: 0;
+}
+
+@media(min-width:768px) {
+    .formulario-encabezado h2 {
+        font-size: 3rem;
+    }
+}
+.input-encabezado {
+    margin-bottom: 1rem;
+    width: 100%;
+}
+
+.input-encabezado input {
+    width: 100%;
+    padding: 0 1.6rem;
+    height: 4.8rem;
+    border: 1px solid #f1f1f1;
+    border-radius: 0.5rem;
+    font-family: var(--parrafos);
+    outline: none;
 }
