--- a/pagina3/css/estilos.css
+++ b/pagina3/css/estilos.css
@@ -49,6 +49,26 @@ p, a {
     color: var(--blanco);
 }
 
+.bordes {
+    border: 2px solid var(--azulClaro);
+    color: var(--azulClaro);
+    text-decoration: none;
+    display: block;
+    text-align: center;
+    transition: background-color .3s ease-in-out;
+}
+
+@media(min-width:768px){
+    .bordes {
+        display: inline-block;
+        margin-top: 2rem;
+    }
+}
+.bordes:hover {
+    background-color: var(--azulClaro);
+    color: var(--blanco);
+}
+
 .btn:hover {
     cursor: pointer;
 }
@@ -257,3 +277,127 @@ p, a {
     font-size: 2rem;
     text-align: justify;
 }
+
+
+/* seccion nosotros */
+.nosotros h2 {
+    text-align: center;
+    font-size: 4rem;
+    color: var(--azulClaro);
+}
+
+@media(min-width:768px){
+    .nosotros h2 {
+        font-size: 5rem;
+    }
+}
+
+.contenido-nosotros {
+    background-image: url(../img/nosotros.jpg);
+    display: grid;
+    grid-template-rows: repeat(2,1fr);
+    background-size: cover;
+    background-position: center center;
+}
+
+
+@media(min-width:768px){
+    .contenido-nosotros {
+        grid-template-columns: repeat(2,1fr);
+    }
+}
+.texto-nosotros {
+    grid-row: 2/3;
+    background-color: var(--blanco);
+    padding: 2rem;
+}
+
+@media(min-width:768px){
+    .texto-nosotros {
+        padding: 5rem;
+    }
+}
+
+.texto-nosotros h3 {
+    font-size: 4rem;
+    color: var(--azulClaro);
+    text-align: center;
+}
+
+.texto-nosotros p {
+    font-size: 2.2rem;
+    text-align: center;
+}
+
+@media(min-width:768px){
+    .texto-nosotros p {
+        text-align: left;
+    }
+}
+
+/* seccion servicios */
+.servicios {
+    padding-top: 5rem;
+}
+
+.servicios h2 {
+    font-size: 5rem;
+    text-align: center;
+    color: var(--azulClaro);
+}
+
+@media(min-width:768px){
+    .contenido-servicios {
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+        gap: 4rem;
+    }
+}
+
+.servicio {
+    display: flex;
+    flex-direction: column;
+    align-items: center;    
+}
+
+.servicio i {
+    background-color: var(--azulClaro);
+    width: 10rem;
+    height: 10rem;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--blanco);
+    font-size: 3rem;
+    box-shadow: 10px 10px 16px -6px rgba(0, 0, 0, 0.45);
+    transition: all .2s ease-in-out;
+}
+
+.servicio h3 {
+    font-size: 2.2rem;
+    color: var(--azulOscuro);
+}
+
+.servicio p {
+    font-size: 1.8rem;
+    text-align: center;
+}
+
+@media(min-width:768px){
+    .servicio p {
+        text-align: left;
+    }
+}
+
+@media(min-width:768px){
+    .servicio:hover {
+        cursor: pointer;
+    }
+
+    .servicio:hover .fa-solid {
+        background-color: var(--blanco);
+        color: var(--azulClaro);
+    }
+}
+
