--- a/pagina3/css/estilos.css
+++ b/pagina3/css/estilos.css
@@ -401,3 +401,97 @@ p, a {
     }
 }
 
+/* section contacto */
+.contacto {
+    padding-top: 5rem;
+}
+
+.contacto h2 {
+    text-align: center;
+    color: var(--azulClaro);
+    font-size: 5rem;
+}
+
+@media(min-width:768px){
+    .contenido-contacto {
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+    }
+}
+
+.informacion-contacto {
+    background-image: url("../img/contacto.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: relative;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.informacion-contacto::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: -1;
+
+}
+
+.informacion-contacto h3 {
+    font-size: 4rem;
+}
+
+.informacion-contacto p {
+    font-size: 2rem;
+}
+.informacion-contacto {
+    color: var(--blanco);
+}
+
+.formulario-contacto {
+    padding: 5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: var(--azulOscuro);
+}
+
+.input-contacto label {
+    color: var(--blanco);
+    font-family: var(--parrafos);
+    display: block;
+    margin: 1rem 0;
+    font-weight: bold;
+}
+
+.input-contacto input {
+    padding: 1.2rem 1rem;
+    font-family: var(--parrafos);
+}
+
+.input-contacto input, .input-contacto textarea {
+    width: 100%;
+    outline: none;
+}
+
+.input-contacto textarea {
+    resize: none;
+}
+
+.input-contacto input[type="submit"]{
+    width: auto;
+    margin-top: 2rem;
+    padding: 1rem 3rem;
+    transition: background-color .3s ease-in-out;
+}
+
+.input-contacto input[type="submit"]:hover {
+    background-color: var(--blanco);
+    color: var(--azulClaro);
+}
